k8s-app/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: 3tier-app
spec:
  selector:
    matchLabels:
      app: backend
  replicas: 2
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: python:3.9-alpine
        command: ["sh", "-c"]
        args:
        - |
          [...]
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: 3tier-app
spec:
  selector:
    app: backend
  ports:
  - port: 8080
    targetPort: 8080
