k8s-app/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: 3tier-app
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 2
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: nginx:alpine
        # Replace default index.html with a custom one that calls our backend API
        command: ["/bin/sh", "-c"]
        args:
        - |
          [...]
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: 3tier-app
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
