k8s-app/ingress-nginx-patch.yaml
# kind ingress-nginx configuration combining standard ingress plus NodePort configurations
# Based on the official kind ingress documentation
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx
  labels:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
spec:
  template:
    spec:
      containers:
      - name: controller
        # This is for demonstration in kind, usually we'd have a full ingress controller manifest
        args:
          - /nginx-ingress-controller
          - --publish-status-address=localhost
          - --watch-ingress-without-class=true
          - --election-id=ingress-controller-leader
          - --ingress-class=nginx
          - --configmap=$(POD_NAMESPACE)/ingress-nginx-controller
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30080
    - name: https
      port: 443
      targetPort: 443
      nodePort: 30443
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/component: controller
